tests/init/neg/function10.scala
class Base { self =>
  (0 to 10).foreach { i =>             // error
    println(a)
  }

  val a = 10
}